--- a/SampleSource2020/Screens/RenshuAPI/RenshuAPI.storyboard
+++ b/SampleSource2020/Screens/RenshuAPI/RenshuAPI.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="pas-f3-p9b">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="pas-f3-p9b">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,13 +15,100 @@
                     <view key="view" contentMode="scaleToFill" id="lA4-jY-7dE">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1bl-zg-5Uw">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RenshuAPITableViewCell" id="AT5-wT-cpk" customClass="RenshuAPITableViewCell" customModule="SampleSource2020" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="170.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="AT5-wT-cpk" id="rGs-o3-BIO">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="170.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2Ag-Cg-gnn">
+                                                    <rect key="frame" x="10" y="10" width="150" height="150.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="150" id="6cM-27-3Kg"/>
+                                                        <constraint firstAttribute="width" constant="150" id="uzZ-Kj-8Zt"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TgV-wU-nsK">
+                                                    <rect key="frame" x="170" y="21" width="42" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F1b-fi-Oki">
+                                                    <rect key="frame" x="170" y="82" width="42" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yeu-PI-N9a">
+                                                    <rect key="frame" x="170" y="112.5" width="42" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="csk-H0-JiS">
+                                                    <rect key="frame" x="170" y="49" width="42" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Yeu-PI-N9a" firstAttribute="top" secondItem="F1b-fi-Oki" secondAttribute="bottom" constant="10" id="6Um-gV-NaP"/>
+                                                <constraint firstItem="Yeu-PI-N9a" firstAttribute="leading" secondItem="2Ag-Cg-gnn" secondAttribute="trailing" constant="10" id="7ep-G6-DF7"/>
+                                                <constraint firstItem="csk-H0-JiS" firstAttribute="leading" secondItem="2Ag-Cg-gnn" secondAttribute="trailing" constant="10" id="EVZ-PY-ZQW"/>
+                                                <constraint firstItem="TgV-wU-nsK" firstAttribute="leading" secondItem="2Ag-Cg-gnn" secondAttribute="trailing" constant="10" id="RAC-qn-9xE"/>
+                                                <constraint firstItem="F1b-fi-Oki" firstAttribute="top" secondItem="csk-H0-JiS" secondAttribute="bottom" constant="10" id="WVk-GE-eep"/>
+                                                <constraint firstItem="2Ag-Cg-gnn" firstAttribute="leading" secondItem="rGs-o3-BIO" secondAttribute="leading" constant="10" id="b4n-M6-dmn"/>
+                                                <constraint firstItem="csk-H0-JiS" firstAttribute="top" secondItem="TgV-wU-nsK" secondAttribute="bottom" constant="10" id="cHv-g7-C7o"/>
+                                                <constraint firstItem="TgV-wU-nsK" firstAttribute="top" secondItem="rGs-o3-BIO" secondAttribute="topMargin" constant="10" id="flZ-eW-JPh"/>
+                                                <constraint firstAttribute="bottom" secondItem="2Ag-Cg-gnn" secondAttribute="bottom" constant="10" id="gli-dd-eqN"/>
+                                                <constraint firstItem="F1b-fi-Oki" firstAttribute="leading" secondItem="2Ag-Cg-gnn" secondAttribute="trailing" constant="10" id="iqR-cM-MyC"/>
+                                                <constraint firstItem="2Ag-Cg-gnn" firstAttribute="top" secondItem="rGs-o3-BIO" secondAttribute="top" constant="10" id="xHz-qn-l73"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="iconImage" destination="2Ag-Cg-gnn" id="BQQ-JI-Txv"/>
+                                            <outlet property="nameLabel" destination="F1b-fi-Oki" id="uIy-pg-WAd"/>
+                                            <outlet property="numberLabel" destination="TgV-wU-nsK" id="gdO-D5-Aue"/>
+                                            <outlet property="techniqueLabel" destination="csk-H0-JiS" id="nhb-t7-BOM"/>
+                                            <outlet property="typeLabel" destination="Yeu-PI-N9a" id="xvo-me-Ag1"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="pas-f3-p9b" id="Krm-xT-UVG"/>
+                                    <outlet property="delegate" destination="pas-f3-p9b" id="Uz9-jz-mtH"/>
+                                </connections>
+                            </tableView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" id="spz-q3-3eG">
+                                <rect key="frame" x="198" y="439" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="L0u-8W-VIH" firstAttribute="trailing" secondItem="1bl-zg-5Uw" secondAttribute="trailing" id="C4I-LH-sdz"/>
+                            <constraint firstItem="1bl-zg-5Uw" firstAttribute="leading" secondItem="L0u-8W-VIH" secondAttribute="leading" id="GZF-cr-eLt"/>
+                            <constraint firstItem="1bl-zg-5Uw" firstAttribute="top" secondItem="L0u-8W-VIH" secondAttribute="top" id="THE-B4-Ivm"/>
+                            <constraint firstItem="L0u-8W-VIH" firstAttribute="bottom" secondItem="1bl-zg-5Uw" secondAttribute="bottom" id="oPT-7g-i6y"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="L0u-8W-VIH"/>
                     </view>
+                    <connections>
+                        <outlet property="indicator" destination="spz-q3-3eG" id="5Sb-h6-wfy"/>
+                        <outlet property="tableView" destination="1bl-zg-5Uw" id="jZ4-Vj-r4n"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OWS-xT-Dr7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="672" y="-181"/>
+            <point key="canvasLocation" x="671.01449275362324" y="-181.47321428571428"/>
         </scene>
     </scenes>
 </document>
