--- a/SampleSource2020/Screens/Syokken/Syokken.storyboard
+++ b/SampleSource2020/Screens/Syokken/Syokken.storyboard
@@ -19,6 +19,44 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YmE-Fn-diQ">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ShokkenTableViewCell" id="2Dl-Ma-D7f" customClass="ShokkenTableViewCell" customModule="SampleSource2020" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2Dl-Ma-D7f" id="oZX-ck-aAA">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hTg-5Y-wzS">
+                                                    <rect key="frame" x="20" y="10" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jbn-33-v5j">
+                                                    <rect key="frame" x="72" y="10" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Jbn-33-v5j" firstAttribute="top" secondItem="oZX-ck-aAA" secondAttribute="top" constant="10" id="Tgv-rB-BlL"/>
+                                                <constraint firstItem="hTg-5Y-wzS" firstAttribute="top" secondItem="oZX-ck-aAA" secondAttribute="top" constant="10" id="VoS-4g-Eu6"/>
+                                                <constraint firstItem="hTg-5Y-wzS" firstAttribute="leading" secondItem="oZX-ck-aAA" secondAttribute="leading" constant="20" id="kL0-CN-FqO"/>
+                                                <constraint firstItem="Jbn-33-v5j" firstAttribute="leading" secondItem="hTg-5Y-wzS" secondAttribute="trailing" constant="10" id="uCt-iY-bmj"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="label" destination="hTg-5Y-wzS" id="h9p-sH-UyB"/>
+                                            <outlet property="priceLabel" destination="Jbn-33-v5j" id="3AA-Oa-GuV"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BEA-KO-SGs" id="O3P-sb-sGh"/>
+                                    <outlet property="delegate" destination="BEA-KO-SGs" id="vdl-Oc-77n"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -30,6 +68,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="3pB-aa-whn"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="YmE-Fn-diQ" id="nAY-yb-SXF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MtZ-AY-xlh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
